@@ -413,3 +413,4 @@ Revision	Log Message
 406		Merge main into minor
 407		Aztecs convert as a horde
 408		Include chinese faction system
+409		If a converted nation has ROTW provinces, make those provinces the nation's religion
